Schere_Stein_Papier Fertig

--- a/Schere_Stein_Papier_Spiel/index.html
+++ b/Schere_Stein_Papier_Spiel/index.html
@@ -14,6 +14,7 @@
     <p id="Vergleich">Stein : Schere</p>
     <p id="Ausgang">Sieg!</p>
     <button onclick="Choosing()" id="Auswahl_Opp">Bot</button>
-    <button id="weiter">Weiter</button>
+    <button onclick="location.reload()" id="weiter">Weiter</button>
+    <button onclick="Check()" id="Check">Check</button>
 </body>
 </html>
